# smart-resume-reviewer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
